actualizacion crud tags, readme y swagger
